@@ -562,7 +562,7 @@ DECL_TEMPLATE(freebsd, sys_swapoff) // 582
 #endif
 
 #if (FREEBSD_VERS >= FREEBSD_15)
-// unimpl __NR_kqueuex             583
+DECL_TEMPLATE(freebsd, sys_kqueuex); // 583
 // unimpl __NR_membarrier          584
 DECL_TEMPLATE(freebsd, sys_timerfd_create); // 585
 DECL_TEMPLATE(freebsd, sys_timerfd_gettime); // 586
