@@ -1,0 +1,1 @@
+Something was written in '/tmp/touch_file'
